@@ -3,17 +3,18 @@ import java.util.*;
 public class DepthFirstSearch {
     Graf graf;
     int[][] T;
+    int[] p;
 
     public DepthFirstSearch(Graf graf) {
         this.graf = graf;
         T = new int[graf.n - 1][2];
+        p= new int[graf.n + 1];
     }
 
     public void maximalSpanningTree(int source) {
         boolean[] inTree = new boolean[graf.n + 1];
         ArrayList<Integer> queue = new ArrayList<>();
 
-        int[] p = new int[graf.n + 1];
         p[source] = 1;
         int k = 1;
 
@@ -21,14 +22,21 @@ public class DepthFirstSearch {
         inTree[source] = true;
 
         while (!queue.isEmpty()) {
-            int current = queue.get(queue.size() - 1);
+            int current = queue.getLast();
             boolean found = false;
 
             for (int i = 1; i <= graf.m; i++) {
                 int u = graf.H[i][0];
                 int v = graf.H[i][1];
+                int maxP = Integer.MIN_VALUE;
 
-                if (u == current && !inTree[v]) {
+                for (int y = 1; y <= graf.n; y++) {
+                    if (inTree[y] && p[y] > maxP) {
+                        Math.min(maxP,p[y]);
+                    }
+                }
+
+                if (u == current && !inTree[v] && p[u] >= maxP) {
                     T[k - 1][0] = u;
                     T[k - 1][1] = v;
 
@@ -38,7 +46,7 @@ public class DepthFirstSearch {
                     queue.add(v);
                     found = true;
                     break;
-                } else if (v == current && !inTree[u]) {
+                } else if (v == current && !inTree[u] && p[v] >= maxP) {
                     T[k - 1][0] = v;
                     T[k - 1][1] = u;
 
@@ -52,7 +60,7 @@ public class DepthFirstSearch {
             }
 
             if (!found) {
-                queue.remove(queue.size() - 1);
+                queue.removeLast();
             }
         }
     }
@@ -63,6 +71,10 @@ public class DepthFirstSearch {
             if (T[i][0] != 0 && T[i][1] != 0) {
                 System.out.print("{" + T[i][0] + "," + T[i][1] + "}, ");
             }
+        }
+
+        for (int i = 0; i < graf.n; i++) {
+            System.out.println(p[i]);
         }
     }
 }
